第二版开始。。

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
 <div class="login-form">
 			<div class="top-login">
-				<span><img src="images/group.png" alt=""/></span>
+				<span><img src="images/group.png" alt="" style="margin-left: 10px;margin-top: 30px;"/></span>
 			</div>
-			<h1>药品管理系统</h1>
+			<h1 style="text-decoration: none;">库存管理系统</h1>
 			<div class="login-top">
 			<form>
 				<div class="login-ic">
@@ -37,8 +37,6 @@
 				</form>
 			</div>
 </div>
-
-
 <div class="toast">
 	<div class="toast__icon" role="alert" aria-live="assertive" aria-atomic="true">
 	</div>
