--- a/sys/ing-orders.html
+++ b/sys/ing-orders.html
@@ -21,12 +21,8 @@
 	<link rel="stylesheet" href="charts/css/morris.css">
 	<!-- jvectormap -->
 	<link rel="stylesheet" href="css/jquery-jvectormap.css">
+
 	<script src="js/modernizr.min.js"></script>
-<!--	<script src="js/common.js"></script>-->
-	<link rel="import" href="common.html">
-	<link rel="stylesheet" href="../css/normalize.min.css">
-	<link rel="stylesheet" href="../css/txstyle.css">
-	<script src="js/common.js"></script>
 </head>
 
 <body>
@@ -52,7 +48,7 @@
 <!-- /Color Changer -->
 <div class="wrapper">
 	<!-- Page Content -->
-	<div id="content1">
+	<div id="content">
 		<!-- Top Navigation -->
 		<div class="container top-brand">
 			<nav class="navbar navbar-default">
@@ -162,127 +158,195 @@
 				</div>
 			</nav>
 		</div>
-				<div class="container mt-0">
-					<div class="row breadcrumb-bar">
-						<div class="col-md-6">
-							<h3 class="block-title">用户列表</h3>
-						</div>
-						<div class="col-md-6">
-							<ol class="breadcrumb">
-								<li class="breadcrumb-item">
-									<a href="index.html">
-										<span class="ti-home"></span>
-									</a>
-								</li>
-								<li class="breadcrumb-item">人员管理</li>
-								<li class="breadcrumb-item active">管理用户信息</li>
-							</ol>
-						</div>
-					</div>
+		<!-- /Menu -->
+		<!-- Breadcrumb -->
+		<!-- Page Title -->
+		<div class="container mt-0">
+			<div class="row breadcrumb-bar">
+				<div class="col-md-6">
+					<h3 class="block-title">途中订单列表 </h3>
 				</div>
-			<div class="container">
-				<div class="row">
-					<!-- Widget Item -->
-					<div class="col-md-12">
-						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">用户列表  <button type="button" className="btn btn-primary"><span className="ti-pencil-alt" onclick="tz()">添加用户</span> </button></h3>
-							<div class="table-responsive mb-3">
-								<table id="tableId" class="table table-bordered table-striped">
-									<thead>
-											<th>ID</th>
-											<th>名称</th>
-											<th>账号</th>
-											<th>密码</th>
-											<th>电话</th>
-											<th>角色</th>
-											<th>操作</th>
-										</tr>
-									</thead>
-									<tbody id="tb">
-										<tr>
-										</tr>
-
-									</tbody>
-                                </table>
-
-							</div>
-						</div>
-					</div>
+				<div class="col-md-6">
+					<ol class="breadcrumb">
+						<li class="breadcrumb-item">
+							<a href="index.html">
+								<span class="ti-home"></span>
+							</a>
+						</li>
+						<li class="breadcrumb-item">订单管理</li>
+						<li class="breadcrumb-item active">途中订单列表</li>
+					</ol>
 				</div>
 			</div>
-
 		</div>
-	</div>
+		<!-- /Page Title -->
 
-<div class="toast">
-	<div class="toast__icon" role="alert" aria-live="assertive" aria-atomic="true">
+		<!-- /Breadcrumb -->
+		<!-- Main Content -->
+		<div class="container">
+
+			<div class="row">
+				<!-- Widget Item -->
+				<div class="col-md-12">
+					<div class="widget-area-2 lochana-box-shadow">
+						<h3 class="widget-title">
+							途中订单列表  <a href="#" onclick="exportOrder()">导出订单</a></h3>
+						<div class="table-responsive mb-3">
+							<table id="tableId" class="table table-bordered table-striped">
+								<thead>
+								<tr>
+									<th class="no-sort">
+										<div class="custom-control custom-checkbox">
+											<input class="custom-control-input" type="checkbox" id="select-all" name="select-all">
+											<label class="custom-control-label" for="select-all"></label>
+										</div>
+									</th>
+									<th>药品名称</th>
+									<th>客户名称</th>
+									<th>配送数量</th>
+									<th>配送状态</th>
+									<th>配送电话</th>
+									<th>配送地址</th>
+									<th>备注</th>
+								</tr>
+								</thead>
+								<tbody id="tb">
+								<tr>
+								</tr>
+
+								</tbody>
+							</table>
+
+
+						</div>
+					</div>
+				</div>
+				<!-- /Widget Item -->
+			</div>
+		</div>
+		<!-- /Main Content -->
+		<!--Copy Rights-->
+
+		<!-- /Copy Rights-->
 	</div>
-	<div class="toast__content">
-		<h2 id ="content"></h2>
-	</div>
+	<!-- /Page Content -->
 </div>
+<!-- Back to Top -->
 
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<!-- Popper Library-->
-	<script src="js/popper.min.js"></script>
-	<!-- Bootstrap Library-->
-    <script src="js/bootstrap.min.js"></script>
-    
-    <!-- Datatable  -->
-	<script src="datatable/jquery.dataTables.min.js"></script>
-	<script src="datatable/dataTables.bootstrap4.min.js"></script>
-    
-	<!-- Custom Script-->
-	<script src="js/custom.js"></script>
-	<script src="js/custom-datatables.js"></script>
+<!-- /Back to Top -->
+<!-- Jquery Library-->
+<script src="js/jquery-3.2.1.min.js"></script>
+<!-- Popper Library-->
+<script src="js/popper.min.js"></script>
+<!-- Bootstrap Library-->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Datatable  -->
+<script src="datatable/jquery.dataTables.min.js"></script>
+<script src="datatable/dataTables.bootstrap4.min.js"></script>
+
+<!-- Custom Script-->
+<script src="js/custom.js"></script>
+<script src="js/common.js"></script>
+
+<script src="js/custom-datatables.js"></script>
 </body>
 <script>
-	window.onload = showUsers;
-	function showUsers(){
+	// var state = "";
+	// function changeList(){
+	// 	state = $("#state").select().val();
+	// 	var tbody = $("#tb");
+	// 	tbody.clean();
+	// 	initData();
+	// }
+
+	window.onload = initData;
+	function initData(){
 		$.ajax({
-			url:baseUrl+"login/show",
+			url:baseUrl+"order/getOrders",
 			type:"get",
-			success:function(data){
-				const list = data.data;
+			data:{state:"1"},
+			success:function (data){
 				if(data.success){
-					var html = "";
-					for(var i = 0;i < list.length ; i++){
-						var medicalAdmin = list[i];
-						var id = medicalAdmin.id;
-						html += "<tr><td>"+medicalAdmin.id+"</td><td>"+medicalAdmin.name+"</td><td>"+medicalAdmin.account+"</td><td>"+medicalAdmin.pwd+"</td><td>"+medicalAdmin.phone+"</td><td>"+medicalAdmin.role?.replace("0","普通员工").replace("1","管理员")+"</td><td><button type='button' className='btn btn-danger' id='delbtn' onclick=deleteUser('"+id+"')><span className='ti-trash'></span> 删除 </button>"+
-								"&nbsp;&nbsp;&nbsp;<button type='button' className='btn btn-primary' onclick=editUser('"+id+"')><span className='ti-pencil-alt'></span> 编辑</button></td></tr>";
+					var list = data.data;
+					console.info(list);
+					var tbody = $("#tb");
+					var html="";
+					for(var i = 0; i< list.length;i++){
+						var id = list[i].id;
+						html+="<tr>";
+						html+="<td><div className=\"custom-control custom-checkbox\">";
+						html+="<input className=\"custom-control-input\" type=\"checkbox\" id=\"1\">";
+						html+="<label className=\"custom-control-label\" htmlFor=\"1\"></label>";
+						html+="</div>";
+						html+="</td>";
+						html+="<td>"+list[i].merchName+"</td>";
+						html+="<td>"+list[i].cusName+"</td>";
+						html+="<td>"+list[i].count+"</</td>";
+						html+="<td>"+list[i].state.replace("0","订单未配送").replace("1","订单已出库").replace("2","订单已完成")+"</</td>";
+						html+="<td>"+list[i].phone+"</</td>";
+						html+="<td>"+list[i].address+"</</td>";
+						html+="<td>"+list[i].remark+"</</td>";
+
+						html+="</tr>";
 					}
-					$("#tb").append(html);
+					tbody.append(html);
+				}else{
+					alert("无订单，请添加");
 				}
 			}
-		})
+		});
 	}
-
-	function tz(){
-		window.location.href="add-user.html";
-	}
-	function deleteUser(id){
-		const confirm = window.confirm("真的要删除吗");
-		if(confirm){
-			$.ajax({
-				url:baseUrl+"login/deleteUser",
-				type:"get",
-				data:{id:id},
-				success:function (data){
-					if(data.success){
-						window.location.href="users.html";
-					}else{
-						window.alert("删除出错!");
-					}
+	function deleteOrder(id){
+		var confirm = window.confirm("确定要删除吗？")
+		if(!confirm){return false;}
+		$.ajax({
+			url:baseUrl+"order/deleteById",
+			type:"get",
+			data:{id:id},
+			success:function (data){
+				if(data.success){
+					alert("删除成功！");
+					window.location.href="orders.html";
 				}
-			});
-		}
+			}
+		});
+	}
+	function editOrder(id){
+		alert(id);
+	}
+	function pubOrder(id){
+		$.ajax({
+			url:baseUrl+"order/updateById",
+			type:"get",
+			data:{id:id,state:"1"},
+			success:function (data){
+				if(data.success){
+					alert("发货成功");
+					window.location.href="orders.html";
+				}
+			}
+		});
+	}
+	function finOrder(id){
+		$.ajax({
+			url:baseUrl+"order/updateById",
+			type:"get",
+			data:{id:id,state:"2"},
+			success:function (data){
+				if(data.success){
+					alert("订单完成");
+					window.location.href="orders.html";
+				}
+			}
+		});
 	}
 
-	function editUser(id){
-		window.location.href="edit-user.html?id="+id;
+	/**
+	 * 导出订单
+	 */
+	function exportOrder(){
+		location.href=baseUrl+"export/exportOrders?state=1";
 	}
-
-
 </script>
 </html>
